[gd_scene load_steps=4 format=3 uid="uid://dfya3lwq3t610"]

[ext_resource type="Theme" uid="uid://pnb3rikxhy3i" path="res://sprites/tiletextures/Themes/Purple_theme.tres" id="1_tvanj"]
[ext_resource type="Script" path="res://scripts/seting.gd" id="1_wr0q6"]

[sub_resource type="Theme" id="Theme_ttnf5"]

[node name="seting" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_tvanj")
script = ExtResource("1_wr0q6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 642.0
theme = SubResource("Theme_ttnf5")

[node name="music" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 72.0
offset_right = 240.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="Panel/music"]
layout_mode = 0
offset_left = 48.0
offset_top = -24.0
offset_right = 176.0
offset_bottom = -1.0
text = "Гучність музики"

[node name="sound" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 264.0
offset_top = 72.0
offset_right = 488.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="Panel/sound"]
layout_mode = 0
offset_left = 48.0
offset_top = -24.0
offset_right = 176.0
offset_bottom = -1.0
text = "Гучність звуків"

[node name="HSlider" type="HSlider" parent="Panel"]
layout_mode = 0
offset_left = 512.0
offset_top = 72.0
offset_right = 736.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="Panel/HSlider"]
layout_mode = 0
offset_left = 48.0
offset_top = -24.0
offset_right = 176.0
offset_bottom = -1.0
text = ".."

[node name="Exit" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 987.0
offset_top = 5.0
offset_right = 1145.0
offset_bottom = 74.0
text = "Вийти"

[connection signal="value_changed" from="Panel/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Panel/sound" to="." method="_on_sound_value_changed"]
[connection signal="value_changed" from="Panel/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Panel/Exit" to="." method="_on_button_pressed"]
